# ScratchAPixel_Attempt

./: .clang-format  .gitignore  CMakeLists.txt
build_scripts/windows/: _variables.ps1  build_cmake.ps1  create_project.ps1  set_aliases.ps1
common/: CMakeLists.txt  defines.inl  file_operations.h  jassert.h  jcamera.h  jinterpolate.h  jmath.h  jmemory.h  project_paths.h.in  raytracer.h  sphere.h
common/linear_algebra/: jmath.h  jvec3.h
src/Chapter01.Maths.For.Computer.Graphics/01.01.Geometry/: CMakeLists.txt
src/Chapter01.Maths.For.Computer.Graphics/01.01.Geometry/src/: 01.01.Geometry.cpp
src/Chapter01.Maths.For.Computer.Graphics/01.02.matrix.inverse.gauss.jordan.method/: CMakeLists.txt
src/Chapter01.Maths.For.Computer.Graphics/01.02.matrix.inverse.gauss.jordan.method/src/: 01.02.matrix.inverse.gauss.jordan.method.cpp
src/Chapter01.Maths.For.Computer.Graphics/01.03.Interpolation/: CMakeLists.txt
src/Chapter01.Maths.For.Computer.Graphics/01.03.Interpolation/assets/: test.ppm  test_bilinear.ppm
src/Chapter01.Maths.For.Computer.Graphics/01.03.Interpolation/src/: 01.03.Interpolation.cpp
src/Chapter01.Maths.For.Computer.Graphics/01.04.camera.lookAt.function/: CMakeLists.txt
src/Chapter01.Maths.For.Computer.Graphics/01.04.camera.lookAt.function/src/: 01.04.camera.lookAt.function.cpp
src/Chapter01.Maths.For.Computer.Graphics/01.05.mathematics.for.shading/: CMakeLists.txt
src/Chapter01.Maths.For.Computer.Graphics/01.05.mathematics.for.shading/src/: 01.05.mathematics.for.shading.cpp
src/Chapter01.Maths.For.Computer.Graphics/01.06.scratch/: CMakeLists.txt
src/Chapter01.Maths.For.Computer.Graphics/01.06.scratch/src/: 01.06.scratch.cpp
src/Chapter01.Maths.For.Computer.Graphics/01.07.monte-carlo/: CMakeLists.txt
src/Chapter01.Maths.For.Computer.Graphics/01.07.monte-carlo/src/: 01.07.monte-carlo.cpp
src/Chapter01.Maths.For.Computer.Graphics/01.08.inverse-transform-sampling/: CMakeLists.txt
src/Chapter01.Maths.For.Computer.Graphics/01.08.inverse-transform-sampling/src/: 01.08.inverse-transform-sampling.cpp
src/Chapter01.Maths.For.Computer.Graphics/01.09.monte-carlo-simulation/: CMakeLists.txt
src/Chapter01.Maths.For.Computer.Graphics/01.09.monte-carlo-simulation/src/: 01.09.monte-carlo-simulation.cpp
src/Chapter01.Maths.For.Computer.Graphics/01.10.monte-carlo-integration/: CMakeLists.txt
src/Chapter01.Maths.For.Computer.Graphics/01.10.monte-carlo-integration/src/: 01.10.monte-carlo-integration.cpp
src/Chapter01.Maths.For.Computer.Graphics/01.11.monte-carlo-importance-sampling/: CMakeLists.txt
src/Chapter01.Maths.For.Computer.Graphics/01.Geometry/: CMakeLists.txt
src/Chapter01.Maths.For.Computer.Graphics/01.Geometry/src/: 01.Geometry.cpp  main.cpp
src/Chapter01.Maths.For.Computer.Graphics/02.matrix.inverse.gauss.jordan.method/: CMakeLists.txt
src/Chapter01/01.getting.started/: CMakeLists.txt
src/Chapter02.3D_Rendering_For_Beginners/02.1.IntroToRayTracing/: CMakeLists.txt
(+4 files in other folders)
